# Autopilot-Software

./: 2017Suasmission.txt  AZA Dynamic Obstacle Avoidance Path Spec.docx  CMakeLists.txt  Input.cpp  README.md  coordinate.cpp  main.cpp  obstacle.cpp  obstacle.h  obstacle_list.cpp  obstacle_list.h  path.cpp  path.h  readme.md  source.cpp  source.h  test1.txt
Get_Learned/: CMakeLists.txt
Get_Learned/src/: CMakeLists.txt  main.cpp
ObstacleAvoidance/: CMakeLists.txt  README.md
ObstacleAvoidance/src/: CMakeLists.txt  coordinate.cpp  main.cpp  obstacle.cpp  obstacle.h  path.cpp  path.h
Obstacle_Avoid/: CMakeLists.txt  README.md
Obstacle_Avoid/src/: Avoidance.cpp  Avoidance.h  CMakeLists.txt  Obstacle.cpp  Obstacle.h  README.md  coordinate.h  main.cpp  source.cpp  source.h
Obstical_Algorithm/: CMakeLists.txt
Obstical_Algorithm/src/: CMakeLists.txt  source.cpp
QGroundGenV3/: CMakeLists.txt  pathgen3.sln  pathgen3.vcxproj  pathgenv3.sln  pathgenv3.vcxproj  pathgenv3.vcxproj.filters
QGroundGenV3/Debug/: pathgen3.ilk  vc141.idb
QGroundGenV3/src/: CMakeLists.txt  Makefile  coordinate.cpp  coordinate.h  main.cpp  obstacle.cpp  obstacle.h  path.cpp  path.h  test.py
QGroundGenV3/test_files/: DrawData.py  obstacle_list.txt  points.txt  test_output.mission  test_output_without_shrink.mission  testmission1.txt
QgroundGen/: README.md  out1.txt  test1.txt
QgroundGen-0.1/: test_input.txt
QgroundGen-0.1/files/: output - Copy.mission  output.mission
QgroundGen-0.1/src/: Input.cpp  coordinate.cpp  main.cpp  obstacle.cpp  obstacle.h  obstacle_list.cpp  obstacle_list.h  pair.cpp  pair.h  path.cpp  path.h  source.cpp  source.h
QgroundGen-0.1/testFiles/: obstacles.txt  output.txt  (+3 more)
QgtoundGen-0.1/: CMakeLists.txt  test_input.txt
files/: out1.mission  out1.txt  sampleOutput.mission
flight_path_python/: data.csv  main.py  mission_file_format.txt  output.fence  output.mission  output.txt  parser.py  path.py
src/: source.cpp
(+30 files in other folders)
